tests/negative/typecheck/args-named-dup.orng
fn main() -> Int {
    let x: (a: Int, b: Int) = (.a = 4, .a = 5, .b = 4)
    0
}